Kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spacetech
---
apiVersion: apps/v1                       
kind: Deployment                          
metadata:                                 
  namespace: spacetech                      
  name: spacetech              
  labels:                                 
    app: spacetech              
spec:                                     
  replicas: 2  
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
  selector:                               
    matchLabels:                          
      app: spacetech                   
  template:                               
    metadata:                 
      labels:                 
        app: spacetech
    spec:                     
      containers:             
        - name: spacetech      
          image: "gabrielrodriguesdev/spacetech-backend:latest"
          imagePullPolicy: "Always"
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: 100Mi
              cpu: "1"
            requests:
              memory: 10Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  namespace: spacetech
  name: spacetech-service
spec:
  type: ClusterIP
  selector: 
    app: spacetech
  ports:
    - name: spacetech-service 
      port: 80
      targetPort: 80
      protocol: TCP 

---

apiVersion: networking.k8s.io/v1                                  
kind: Ingress                                                                 
metadata:                                                                     
  namespace: spacetech                                                       
  name: ingress-spacetech                                                        
  annotations:                                                               
    kubernetes.io/ingress.class: "nginx"                                                               
    nginx.ingress.kubernetes.io/affinity-mode: balanced                      
spec:                                                                        
  rules:                                                                     
  #- host: "api.spacetech.com.br"                                        
    - http:                                                                    
        paths:                                                                 
        - path: /
          pathType: Prefix                                                     
          backend:                                                             
            service: 
              name: spacetech-service
              port:
                number: 80
